[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Hierarchy Game File/Upload Image File/UploadWordImage.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[node name="WordImageHBoxContainer" type="HBoxContainer"]
margin_right = 318.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
script = ExtResource( 2 )

[node name="ImageContainer" type="Control" parent="."]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )

[node name="ImageTexture" type="TextureRect" parent="ImageContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -290, -19 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 132.0
margin_right = 162.0
margin_bottom = 128.0
custom_constants/separation = 30

[node name="UploadButton" type="Button" parent="."]
margin_left = 166.0
margin_right = 352.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
rect_pivot_offset = Vector2( -290, -19 )
custom_fonts/font = SubResource( 1 )
text = "Upload"

[node name="ImageUploadFileDialog" type="FileDialog" parent="."]
margin_left = 416.0
margin_right = 731.0
margin_bottom = 150.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2

[connection signal="pressed" from="UploadButton" to="." method="_on_UploadButton_pressed"]
[connection signal="file_selected" from="ImageUploadFileDialog" to="." method="_on_ImageUploadFileDialog_file_selected"]
